[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-caching>=2.4.0",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
